# LiquidLinearUnits

./: .gitignore  README.md  io_bench_report.txt  pyproject.toml  pyrefly.toml  synth_bench_report.txt
benchmarks/: RESULTS.md  UNIFIED_RESULTS.md  fourier_parity.txt  io_bench_report.txt  llm_all_bench_report.md  llm_all_speed.md  llm_all_speed_aggregate.json  llm_bench_report.md  llm_lora_rank_sweep.md  llm_lora_rank_sweep_aggregate.json  llm_scaled_report.json  llm_scaled_report.md  mod97_grok.txt  small_train_report.txt  synth_bench_report.txt
llu/: __init__.py
llu/models/: __init__.py  graph_model.py  liquid_linear.py  liquid_llm.py  liquid_model.py  mlp_model.py  model.py  rank1_liquid.py  shared_momentum_liquid.py  utils.py
llu/models/gdn2/: __init__.py  gdn2.py  gdn2_gpu.py
llu/models/llns/: __init__.py  base.py  batch_momentum_liquid.py  cross_attn_lora.py  factorized_batch_momentum_liquid.py  factorized_liquid.py  gdn_liquid.py  learnable_batch_momentum_liquid.py  learnable_shared_momentum_liquid.py  liquid_linear.py  momentum_gdn_liquid.py  rank1_liquid.py  rankr_liquid.py  shared_momentum_liquid.py  stable_liquid.py  utils.py
scripts/: bench_llm_all.py  bench_llm_lora_rank.py  bench_llm_scaled.py  bench_tasks.py  io_tasks.py  run_all_benchmarks.py  train.py  train_io.py  train_llm.py  train_synth.py
tests/: test_batch_momentum_liquid.py  test_compatibility.py  test_cross_attn_lora.py  test_decay_rate_learnable.py  test_factorized_vs_stable_vs_batch.py  test_gdn2.py  test_gdn2_cpu_parity.py  test_gdn2_feature_parity.py  test_gdn_liquid.py  test_liquid_linear.py  test_liquid_llm.py  test_model.py  test_momentum_gdn_liquid.py  test_rank1_liquid.py  test_rankr_liquid.py  test_shared_momentum_liquid.py  test_stable_liquid.py  test_svd_parameterization.py  test_utils.py
