[project]
name = "liquid-linear-units"
version = "0.1.0"
description = "Input-adaptive linear transformations in PyTorch"
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets>=5.0.0",
    "einops>=0.8.2",
    "huggingface-hub==1.5.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "torch>=2.14.0.dev20260707",
    "torchao>=0.18.0.dev20260709",
    "torchvision>=0.29.0.dev20260708",
    "transformers>=5.13.1",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchao = { index = "pytorch" }

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = ["slow: marks tests as slow"]

[tool.setuptools]
package-dir = { "llu" = "llu" }

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
]
